# mapsforsimulatorstage

./: CMakeLists.txt  aulamap.yaml  aulamapstage.world  clearmaplarge.yaml  clearmaplargeamcl.world  corridor.yaml  corridoramcl.world  galerija.yaml  galerijaicent.yaml  galerijaicentmapstage.world  galerijamapstage.world  hmapamclomnidriveugly.world  hmapugly.yaml  iaslab2.yaml  iaslab2_p3at.world  krunolab.yaml  krunolab2.yaml  krunolab3.yaml  krunolab_p3dx.world  lab78testomnidrive.world  map.inc  mapfile_hall78temp.yaml  package.xml  pioneer.inc  sick2.inc  smap.yaml  smapamclomnidrive.world  smaprot18p5.yaml  smaprot18p5amclomnidrive.world  smaprot78p5.yaml  smaprot78p5amclomnidrive.world  spiral.yaml  spiralamclomnidrive.world  ushape.yaml  ushapeamcl.world  zari2map.yaml  zari2mapstage.world
bitmaps/: galerija.pgm  galerija2.pgm  galerijaicent.pgm  galerijaicentporavnata.pgm  iaslab2.pgm  krunolab.pgm  krunolab2.pgm  krunolab3.pgm  zari2map.pgm
